* image quality switcher * removed default fullscreen on mobile * IE11 fixes

--- a/src/decor.css
+++ b/src/decor.css
@@ -70,6 +70,9 @@ img.image {
 .clickable:not(.has-area) img.image {
 	pointer-events: all;
 }
+.no-events {
+	pointer-events: none !important;
+}
 .click {
 	position: absolute;
 }
